<resources>
    <string name="app_name">"eat orgasm"</string>

    <string name="eat_tab_home_string">"home"</string>
    <string name="eat_tab_map">"map"</string>
    <string name="eat_tab_chat">"chatting"</string>
    <string name="eat_tab_private_string">"private"</string>

    <string name="insert_image_chooser_title">"Choose your profile picture"</string>

    <string name="string_cancel">"Cancel"</string>
    <string name="cm_btn_done">"Done"</string>
    <string name="string_update">"Update"</string>
    <string name="string_uploading">"Uploading…"</string>

    <string name="string_title">"Title"</string>
    <string name="string_contents">"Contents"</string>
    <string name="string_new_board">"New Board"</string>
    <string name="string_location">"Location"</string>

    <string name="string_user_id">"User ID"</string>
    <string name="string_display_name">"Display Name"</string>
    <string name="string_email">"Email"</string>
    <string name="string_phone_number">"PhoneNumber"</string>
    <string name="string_modification">"modification"</string>
    <string name="string_delete">"delete"</string>

    <string name="board_like">"like"</string>
    <string name="board_reply">"reply"</string>

    <string name="board_writer">"writer"</string>

    <string name="board_likes">"likes %d"</string>
    <string name="board_comments">"comments %d"</string>
    <string name="board_views">"views %d"</string>
    <string name="board_compliant">"likes %d, comments %d, views %d"</string>
    <string name="board_input_comment">"Please leave a comment."</string>
</resources>