<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools" >
    <data>
        <variable
            name="board"
            type="com.cason.eatorgasm.model.entity.BoardInfoModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/board_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:title="@string/string_new_board" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray10" >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/board_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.cason.eatorgasm.component.BoardFragment">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/ib_board_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:scaleType="fitXY"
                    android:foregroundGravity="center_vertical"
                    android:src="@drawable/ic_location"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tl_board_title"
                    app:layout_constraintStart_toStartOf="parent" >
                </androidx.appcompat.widget.AppCompatImageButton>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_board_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ib_board_location" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_board_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/common_round_shape"
                        android:text="@={board.location}"
                        android:hint="@string/string_location" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_board_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxCornerRadiusBottomEnd="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusTopStart="50dp"
                    app:layout_constraintTop_toBottomOf="@id/tl_board_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_board_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/common_round_shape"
                        android:text="@={board.title}"
                        android:hint="@string/string_title" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/et_board_contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:text="@={board.contents}"
                    android:hint="@string/string_contents"
                    android:background="@drawable/common_round_shape"
                    app:layout_constraintTop_toBottomOf="@id/tl_board_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_board_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="?colorPrimary"
                    android:text="@string/cm_btn_done"
                    app:layout_constraintTop_toBottomOf="@id/et_board_contents"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>