<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.cason.eatorgasm.viewmodel.screen.EditProfileViewModel" />
        <variable
            name="profile"
            type="com.cason.eatorgasm.model.entity.UserInfoModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <FrameLayout
            android:id="@+id/fl_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toTopOf="@id/tl_private_uid"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_profile_circle"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent" />

            <ImageView
                android:id="@+id/iv_profile_change"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/white"
                android:src="@drawable/ic_eat_account_profile_camera"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_private_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/EatCommonTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/fl_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_private_uid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={profile.userId}"
                android:enabled="false"
                android:hint="@string/string_user_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_private_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/EatCommonTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/tl_private_uid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_private_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={profile.name}"
                android:textColorHint="@color/white_alpha30"
                android:hint="@string/string_display_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_private_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/EatCommonTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/tl_private_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_private_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:enabled="false"
                android:text="@={profile.email}"
                android:hint="@string/string_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_private_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/EatCommonTextInputLayout"
            app:layout_constraintTop_toBottomOf="@id/tl_private_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_private_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:text="@={profile.phoneNumber}"
                android:textColorHint="@color/white_alpha30"
                android:hint="@string/string_phone_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_update"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_private_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>